chore(dependencies): Dependency handling without lockfiles (#195)
* chore(dependencies): Use spinnaker-dependencies instead of locking

* chore(dependencies): Let Spring manage Jackson version, just ensure aligned

* chore(dependencies): Use JUnit BOM

* chore(dependencies): undo unnecessary delta

* chore(dependencies): apply JUnit BOM to everything

* chore(dependencies): remove latest.release versions

--- a/gradle/junit4.gradle
+++ b/gradle/junit4.gradle
@@ -19,11 +19,11 @@ repositories {
 }
 
 dependencies {
-  testCompile "org.junit.platform:junit-platform-runner:+"
-  testCompile "com.nhaarman:mockito-kotlin:+"
+  testCompile "org.junit.platform:junit-platform-runner"
+  testCompile "com.nhaarman:mockito-kotlin:${spinnaker.version('mockitoKotlin')}"
 
-  testRuntime "org.junit.platform:junit-platform-launcher:+"
-  testRuntime "org.junit.vintage:junit-vintage-engine:+"
+  testRuntime "org.junit.platform:junit-platform-launcher"
+  testRuntime "org.junit.vintage:junit-vintage-engine"
 }
 
 test {
