--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ buildscript {
     maven { url "http://spinnaker.bintray.com/gradle" }
   }
   dependencies {
-    classpath "com.netflix.spinnaker.gradle:spinnaker-dev-plugin:5.2.1"
+    classpath "com.netflix.spinnaker.gradle:spinnaker-dev-plugin:5.2.2"
     classpath "org.springframework.boot:spring-boot-gradle-plugin:$bootVersion"
     classpath "com.netflix.nebula:nebula-kotlin-plugin:$kotlinVersion"
     classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
@@ -43,6 +43,17 @@ allprojects {
 
   group = "com.netflix.spinnaker.keel"
 
+  ext {
+    spinnakerDependenciesVersion = "1.23.0"
+    if (project.hasProperty("spinnakerDependenciesVersion")) {
+      spinnakerDependenciesVersion = project.property("spinnakerDependenciesVersion")
+    }
+  }
+
+  spinnaker {
+    dependenciesVersion = spinnakerDependenciesVersion
+  }
+
   configurations.all {
     exclude group: "javax.servlet", module: "servlet-api"
     exclude group: "org.slf4j", module: "slf4j-log4j12"
@@ -61,15 +72,8 @@ subprojects {
   
   dependencies {
     implementation platform("org.springframework.boot:spring-boot-dependencies:$bootVersion")
+    testImplementation platform("org.junit:junit-bom:${spinnaker.version('jupiter')}")
     components.all(JacksonAlignmentRule)
-  }
-
-  configurations {
-    ["compile", "runtime", "testCompile", "testRuntime"].each { scope ->
-      getByName("${scope}Classpath") {
-        resolutionStrategy.activateDependencyLocking()
-      }
-    }
   }
 
   test {
@@ -77,14 +81,6 @@ subprojects {
       exceptionFormat = "full"
     }
   }
-}
-
-/**
- * Use this task with --write-locks to upgrade all the dependencies in one shot
- */
-task allDependencies {
-  evaluationDependsOnChildren()
-  dependsOn subprojects.collect { it.tasks["dependencies"] }
 }
 
 defaultTasks ":keel-api:run"
