--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 kapt.use.worker.api=true
-
-bootVersion=1.5.14.RELEASE
+bootVersion=1.5.19.RELEASE
+k8sVersion=3.0.0
 kotlinVersion=1.3.20
+coroutinesVersion=1.1.1
+minutestVersion=0.42.0
 spinnakerVersion=4.1.2
+striktVersion=0.17.2
