--- a/gradle/junit5.gradle
+++ b/gradle/junit5.gradle
@@ -19,12 +19,12 @@ repositories {
 }
 
 dependencies {
-  testCompile "org.junit.platform:junit-platform-runner:+"
-  testCompile "com.nhaarman:mockito-kotlin:+"
-  testCompile "org.junit.jupiter:junit-jupiter-api:+"
+  testCompile "org.junit.platform:junit-platform-runner"
+  testCompile "com.nhaarman:mockito-kotlin:${spinnaker.version('mockitoKotlin')}"
+  testCompile "org.junit.jupiter:junit-jupiter-api"
 
-  testRuntime "org.junit.platform:junit-platform-launcher:+"
-  testRuntime "org.junit.jupiter:junit-jupiter-engine:+"
+  testRuntime "org.junit.platform:junit-platform-launcher"
+  testRuntime "org.junit.jupiter:junit-jupiter-engine"
 }
 
 test {
