--- a/keel-core-test/keel-core-test.gradle
+++ b/keel-core-test/keel-core-test.gradle
@@ -2,8 +2,9 @@ apply plugin: "java-library"
 
 dependencies {
   implementation project(":keel-core")
-  implementation "org.junit.jupiter:junit-jupiter-api:+"
-  implementation "io.strikt:strikt-core:+"
-  implementation "com.nhaarman:mockito-kotlin:+"
-  api "com.oneeyedmen:minutest:+"
+  implementation platform("org.junit:junit-bom:${spinnaker.version('jupiter')}")
+  implementation "org.junit.jupiter:junit-jupiter-api"
+  implementation "io.strikt:strikt-core:$striktVersion"
+  implementation "com.nhaarman:mockito-kotlin:${spinnaker.version('mockitoKotlin')}"
+  api "com.oneeyedmen:minutest:$minutestVersion"
 }
