--- a/keel-ec2-plugin/keel-ec2-plugin.gradle
+++ b/keel-ec2-plugin/keel-ec2-plugin.gradle
@@ -7,9 +7,9 @@ dependencies {
   implementation project(":keel-plugin")
   implementation project(":keel-clouddriver")
   implementation project(":keel-orca")
-  implementation "com.netflix.spinnaker.kork:kork-core:2.+"
+  implementation "com.netflix.spinnaker.kork:kork-core:${spinnaker.version('kork')}"
 
-  testImplementation "io.strikt:strikt-core:+"
-  testImplementation "com.oneeyedmen:minutest:+"
+  testImplementation "io.strikt:strikt-core:$striktVersion"
+  testImplementation "com.oneeyedmen:minutest:$minutestVersion"
   testImplementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml"
 }
