--- a/keel-retrofit/keel-retrofit.gradle
+++ b/keel-retrofit/keel-retrofit.gradle
@@ -16,11 +16,11 @@
 apply plugin: "java-library"
 
 dependencies {
-  api "com.squareup.retrofit2:retrofit:+"
-  api "com.squareup.retrofit2:converter-jackson:+"
-  api("com.netflix.spinnaker.kork:kork-web:2.+")
-  api "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:+"
-  api "org.jetbrains.kotlinx:kotlinx-coroutines-core:+"
+  api "com.squareup.retrofit2:retrofit:${spinnaker.version('retrofit2')}"
+  api "com.squareup.retrofit2:converter-jackson:${spinnaker.version('retrofit2')}"
+  api("com.netflix.spinnaker.kork:kork-web:${spinnaker.version('kork')}")
+  api "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+  api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
 
-  implementation "com.squareup.okhttp3:logging-interceptor:+"
+  implementation "com.squareup.okhttp3:logging-interceptor:${spinnaker.version('okHttp3')}"
 }
