--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
     "@types/plotly.js": "^1.28.12",
-    "@uirouter/angularjs": "^1.0.15",
-    "@uirouter/react-hybrid": "^0.1.0",
+    "@uirouter/angularjs": "1.0.20",
+    "@uirouter/react-hybrid": "0.3.8",
     "Select2": "git://github.com/select2/select2.git#3.4.8",
     "angular": "~1.6.3",
     "angular-ui-bootstrap": "^2.5.0",
@@ -52,10 +52,10 @@
     "n3-charts": "^2.0.18",
     "ngimport": "^0.6.0",
     "plotly.js": "^1.35.2",
-    "react": "16.3.2",
+    "react": "16.6.0",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-typeahead": "^3.2.4",
-    "react-dom": "16.3.2",
+    "react-dom": "16.6.0",
     "react-ga": "^2.4.1",
     "react-redux": "^5.0.7",
     "react-select": "^1.2.1",
@@ -144,10 +144,11 @@
     "expose-loader": "^0.7.1",
     "file-loader": "^0.11.1",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
-    "formik": "^0.10.5",
+    "formik": "1.3.1",
     "happypack": "^3.0.3",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "human-readable-ids": "^1.0.4",
     "husky": "^1.1.0",
     "imports-loader": "^0.7.0",
     "istanbul-instrumenter-loader": "^3.0.1",
@@ -171,6 +172,7 @@
     "less-loader": "^4.0.2",
     "license-checker": "^15.0.0",
     "loader-utils": "^1.1.0",
+    "memoize-one": "^4.0.2",
     "ng-annotate-loader": "^0.6.0",
     "ng-annotate-webpack-plugin": "^0.2.1-pre",
     "ngtemplate-loader": "^1.3.1",
@@ -178,6 +180,7 @@
     "prettier": "^1.14.3",
     "pretty-quick": "^1.7.0",
     "prop-types": "^15.6.1",
+    "react-ace": "^6.1.4",
     "react-test-renderer": "16.3.2",
     "react2angular": "^3.2.1",
     "redux-test-utils": "^0.3.0",
