--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "format": "prettier --write 'src/**/*.{ts,tsx,less}'"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
+    "@fortawesome/fontawesome-free": "5.5.0",
     "@types/plotly.js": "^1.28.12",
     "@uirouter/angularjs": "^1.0.15",
     "@uirouter/react-hybrid": "^0.1.0",
     "Select2": "git://github.com/select2/select2.git#3.4.8",
-    "angular": "~1.6.3",
+    "angular": "1.6.10",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "1.0.0",
     "angular-ui-sortable": "^0.17.0",
@@ -44,15 +44,18 @@
     "classnames": "^2.2.5",
     "diff-match-patch": "^1.0.0",
     "dompurify": "^1.0.4",
+    "human-readable-ids": "1.0.4",
     "ify-loader": "^1.1.0",
     "js-yaml": "^3.8.3",
     "lodash": "^4.16.1",
     "lodash-decorators": "^4.4.1",
+    "memoize-one": "4.0.2",
     "moment-timezone": "^0.4.0",
     "n3-charts": "^2.0.18",
     "ngimport": "^0.6.0",
     "plotly.js": "^1.35.2",
     "react": "16.3.2",
+    "react-ace": "6.1.4",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-typeahead": "^3.2.4",
     "react-dom": "16.3.2",
@@ -80,8 +83,8 @@
     "ui-select": "^0.19.6"
   },
   "devDependencies": {
-    "@spinnaker/amazon": "^0.0.118",
-    "@spinnaker/core": "0.0.262",
+    "@spinnaker/amazon": "^0.0.173",
+    "@spinnaker/core": "0.0.335",
     "@spinnaker/styleguide": "^1.0.1",
     "@types/angular": "1.6.26",
     "@types/angular-mocks": "^1.5.10",
@@ -144,7 +147,7 @@
     "expose-loader": "^0.7.1",
     "file-loader": "^0.11.1",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
-    "formik": "^0.10.5",
+    "formik": "1.3.1",
     "happypack": "^3.0.3",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "^2.28.0",
