feat(json): use Ace Editor for JSON editing (#406)

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@fortawesome/fontawesome-free": "5.5.0",
     "@types/plotly.js": "^1.28.12",
     "@uirouter/angularjs": "^1.0.15",
-    "@uirouter/react-hybrid": "^0.1.0",
+    "@uirouter/react-hybrid": "0.3.9",
     "Select2": "git://github.com/select2/select2.git#3.4.8",
     "angular": "1.6.10",
     "angular-ui-bootstrap": "^2.5.0",
@@ -55,7 +55,7 @@
     "ngimport": "^0.6.0",
     "plotly.js": "^1.35.2",
     "react": "16.3.2",
-    "react-ace": "6.1.4",
+    "react-ace": "6.4.0",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-typeahead": "^3.2.4",
     "react-dom": "16.3.2",
