--- a/settings.gradle
+++ b/settings.gradle
@@ -24,7 +24,8 @@ include "gate-core",
   "gate-proxy",
   "gate-saml",
   "gate-web",
-  "gate-x509"
+  "gate-x509",
+  "gate-integrations-gremlin"
 
 def setBuildFile(project) {
   project.buildFileName = "${project.name}.gradle"
