--- a/halyard-config/halyard-config.gradle
+++ b/halyard-config/halyard-config.gradle
@@ -9,6 +9,7 @@ dependencies {
   compile spinnaker.dependency('front50Gcs')
   compile spinnaker.dependency('front50S3')
   compile spinnaker.dependency('korkSecrets')
+  compile spinnaker.dependency('korkSecretsAws')
 
 //  TODO: add clouddriverDCOS once that's merged
   compile project(':halyard-core')
