--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/fontawesome-free": "^5.4.1",
     "@spinnaker/kayenta": "0.0.72",
     "@spinnaker/styleguide": "^1.0.12",
+    "@types/date-fns": "^2.6.0",
     "@types/memoize-one": "^3.1.1",
     "@types/react-tether": "^0.5.3",
     "@uirouter/react-hybrid": "0.3.9",
@@ -54,6 +55,7 @@
     "create-react-context": "^0.2.3",
     "d3-scale": "^2.0.0",
     "d3-shape": "^1.2.0",
+    "date-fns": "^1.30.1",
     "diff-match-patch": "^1.0.0",
     "dompurify": "^1.0.4",
     "formik": "^1.3.1",
@@ -66,8 +68,8 @@
     "js-yaml": "^3.9.0",
     "lodash": "^4.16.1",
     "lodash-decorators": "4.5.0",
+    "luxon": "^1.11.3",
     "memoize-one": "^4.0.2",
-    "moment-timezone": "^0.5.23",
     "n3-charts": "^2.0.18",
     "ngimport": "^0.6.0",
     "prop-types": "15.6.1",
@@ -108,9 +110,9 @@
     "@types/jqueryui": "^1.11.32",
     "@types/js-yaml": "3.5.30",
     "@types/lodash": "^4.14.64",
+    "@types/luxon": "^1.11.1",
     "@types/marked": "^0.0.28",
     "@types/minimist": "^1.2.0",
-    "@types/moment-timezone": "^0.2.34",
     "@types/node": "7.0.5",
     "@types/prop-types": "^15.5.2",
     "@types/react": "^16.4.18",
