--- a/igor-web/igor-web.gradle
+++ b/igor-web/igor-web.gradle
@@ -21,6 +21,7 @@ dependencies {
     spinnaker.group "retrofitDefault"
 
     compile spinnaker.dependency("kork")
+    compile spinnaker.dependency("korkArtifacts")
     compile spinnaker.dependency("korkStackdriver")
     compile spinnaker.dependency("korkWeb")
     compile spinnaker.dependency("korkJedis")
